# diplom

./: .gitignore  CMakeLists.txt  README.md  build.cmd  build.sh  build_debug.cmd  build_debug.sh  build_release.cmd  build_release.sh  install_deps.sh  todo.txt
DOCS/: Article _VERSION1.docx  Article _VERSION2.docx  DIPLOM_FOR_CHECK.docx  DIPLOM_RESEARCH.xlsx  DiplomMain.docx  DiplomMain_Title.docx  DiplomMain_VERSION1.docx  DiplomTitle.docx  DiplomTitle_BASE.docx  EconomicPart.docx  Tezisu.docx  Tezisu_VERSION1.docx  Tezisu_VERSION2.docx  ~$plomMain.docx  Аннотация.docx  Відгук.doc  ДиаграмаКласов.vsdx  ДиаграмаПоследовательности.vsdx  ДиаграмаСвязейСостояний.vsdx  Дослідження_часової_ефективності_відображення_комп`ютерної_графіки.pptx  ОБЖ_диплом_Полищук_Илья_961м_ПЗ1921.docx  Рецензія.doc  ТехническоеЗадание.docx  Титулки.docx
DOCS/ANTIPLAGIAT_REPORTS/: FullReport_Илья Полищук.html
DOCS/DOCS_PREV_YEAR/: Article .docx  ~$l Diploma.docx  Дослідження_часової_ефективності_відображення_комп`ютерної_графіки.pptx
DOCS/FINAL_VERSIONS/: Course5_Semestr1.7z  DiplomMain.docx  Дипломна_Робота_Поліщук_І_А_ПЗ1921_961м_FINAL.docx  Дипломна_Робота_Поліщук_І_А_ПЗ1921_961м_VERSION2.docx  Метадані-ВКР-Polishchuk_Illia_Andreevich_1921(961м).doc  Поліщук.docx  РецензияПоліщук_І_А_FULL.docx  Справка от руководителя.docx  Справка от руководителя_clear.docx  видгук.doc  рецензия.doc  рецензия_FULL.doc  рецензия_clear.doc  рецензия_clear2.doc
resources/: imgui.ini
source/: .main.cpp.swp  CMakeLists.txt  main.cpp
source/Render/: CMakeLists.txt  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Render.h
source/Render/RenderOpengl/: CMakeLists.txt  Mesh.cpp  Mesh.h  Model.cpp  Model.h  RenderGUI.cpp  RenderGUI.h  RenderOpengl.cpp  RenderOpengl.h  Shader.cpp  Shader.h  Shaders.h  Window.cpp
source/Render/RenderOpengl/Shaders/: model_loading.vert  model_loading_v.frag  shader_f.frag  shader_f_simple.frag  shader_v.vert  shader_v_simple.vert
source/Render/RenderVulkan/: CMakeLists.txt  Mesh.h  Model.cpp  Model.h  RenderVulkan.cpp  RenderVulkan.h
source/Render/RenderVulkan/Shaders/: shader.frag  shader.vert  shader_simple.frag  shader_simple.vert
source/Scene/: CMakeLists.txt  Scene.cpp  Scene.h
source/Utils/: Utils.cpp  Utils.h
